--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
+    "adm-zip": "^0.5.16",
     "codemirror": "^6.0.1",
+    "jszip": "^3.10.1",
     "monaco-editor": "^0.52.2"
   }
 }
